--- a/respons.html
+++ b/respons.html
@@ -18,11 +18,11 @@
         }
         .image-container img{
             width: 100%;
-            height: 200px;
+            /* height: 200px; */
         }
         @media screen and (max-width:576px) {
             .image-container{
-                flex-direction: column;
+                flex-direction: column-reverse;
             }
             .image-container div{
             width: 100%;
